--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #a8d0ff;
+    /* --background: #a8d0ff; */
+    --background: #e9e2d9;
     --foreground: #ededed;
   }
 }
